# viduli-samples

django-bench/: .gitignore  README.md  pyproject.toml  spec.md
django-bench/backend/: settings.py  urls.py
django-bench/comments/: admin.py  models.py  serializers.py  urls.py  views.py
django-bench/posts/: admin.py  models.py  serializers.py  views.py
django-bench/users/: admin.py  models.py
django-bench/users/management/commands/: create_token.py  seed.py
