[tool.poetry]
name = "django-bench"
version = "0.1.0"
description = "Django benchmark application with async REST API"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
django = "^5.2.8"
psycopg2 = "^2.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

